--- a/static/css/main.css
+++ b/static/css/main.css
@@ -256,6 +256,9 @@ visibility: hidden;
 .form-rad-group {
 /* background-color: rgb(228, 228, 228); */
 visibility: hidden;
+height:400px;
+width:1150px;
+overflow-y: scroll;
 }
 
 .form-rad-valve-group {
