--- a/templates/yourheat/orderforms/radiatorform.html
+++ b/templates/yourheat/orderforms/radiatorform.html
@@ -122,6 +122,46 @@
                         <td>{{wizard.form.sty_12}}</td>
                         <td>{{wizard.form.loc_12}}</td>    
                     </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_13}}</td>
+                        <td>{{wizard.form.sty_13}}</td>
+                        <td>{{wizard.form.loc_13}}</td>    
+                    </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_14}}</td>
+                        <td>{{wizard.form.sty_14}}</td>
+                        <td>{{wizard.form.loc_14}}</td>    
+                    </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_15}}</td>
+                        <td>{{wizard.form.sty_15}}</td>
+                        <td>{{wizard.form.loc_15}}</td>    
+                    </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_16}}</td>
+                        <td>{{wizard.form.sty_16}}</td>
+                        <td>{{wizard.form.loc_16}}</td>    
+                    </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_17}}</td>
+                        <td>{{wizard.form.sty_17}}</td>
+                        <td>{{wizard.form.loc_17}}</td>    
+                    </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_18}}</td>
+                        <td>{{wizard.form.sty_18}}</td>
+                        <td>{{wizard.form.loc_18}}</td>    
+                    </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_19}}</td>
+                        <td>{{wizard.form.sty_19}}</td>
+                        <td>{{wizard.form.loc_19}}</td>    
+                    </tr>
+                    <tr>
+                        <td>{{wizard.form.rad_20}}</td>
+                        <td>{{wizard.form.sty_20}}</td>
+                        <td>{{wizard.form.loc_20}}</td>    
+                    </tr>
                     
                 </table>
             </div>
@@ -180,7 +220,7 @@
                     <tr>
                         <td>{{wizard.form.val_11}}</td>
                         <td>{{wizard.form.vaq_11}}</td>
-                    </tr>
+                    </tr> 
                     <tr>
                         <td>{{wizard.form.val_12}}</td>
                         <td>{{wizard.form.vaq_12}}</td>
