YH Added component costs roll-up to QP

--- a/templates/yourheat/orderforms/financeform.html
+++ b/templates/yourheat/orderforms/financeform.html
@@ -63,7 +63,9 @@
 
                     {{ wizard.form.product_price.as_hidden }}
                     {{ wizard.form.component_price_total.as_hidden }}
+                    {{ wizard.form.component_cost_total.as_hidden }}
                     {{ wizard.form.parts_price_total.as_hidden }}
+                    {{ wizard.form.parts_cost_total.as_hidden }}
                     {{ wizard.form.estimated_duration_cost.as_hidden }}
                     {{ wizard.form.component_duration_total.as_hidden }}
                     {% if wizard.form.user_name != 'yourheatx' %}                
