YH Multiple final changes for invoicing v1

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -161,6 +161,11 @@ ul#id_7-radiator_specification li {
   ;
 }
 
+.btn-comms {
+  width:350px;
+  text-align: left;
+}
+
 .trustpilot-logo {
   height: 100px;
   margin-top: 50px;
