--- a/templates/yourheat/adminpages/preview_comms.html
+++ b/templates/yourheat/adminpages/preview_comms.html
@@ -18,6 +18,9 @@
     {% if comms == "Balance Invoice Comms" %}
         <a class="btn btn-warning" href="/ViewInvoicePDF/{{customer_id}}/BalanceInvoice" target="_blank">Preview Balance Invoice</a>
     {% endif %}
+    {% if comms == "Receipt Acknowlegement Comms" %}
+        <a class="btn btn-warning" href="/ViewReceiptPDF/{{customer_id}}" target="_blank">Preview Acknowledgement Receipt</a>
+    {% endif %}
     <a class="btn btn-primary" href="/EmailComms/{{comms}}/{{customer_id}}">Email to Customer</a>
     <a class="btn btn-secondary" href="/ProcessingCancelled/">Cancel</a>
 
