YH Deposit Receipt and Traffic Lighting added

--- a/templates/pdf/user_yourheatx/customer_comms/Balance Invoice Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Balance Invoice Comms.html
@@ -138,7 +138,7 @@
                     We trust the installation went well and you had a pleasant experience using Your Heat. 
                 </p>
                 <p class="all_text">      
-                    Please find attached the information required for your balance payment, we can take this via Credit/Debit card including AMEX,
+                    Please find attached the information required for your balance payment, we can take this via Credit/Debit card 
                     simply by contacting a member of the team here on <a href="tel:01732622990"><b>01732 622990</b></a>.
                 </p>
                 <p class="all_text">
