--- a/templates/pdf/user_yourheatx/customer_comms/Deposit Receipt Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Deposit Receipt Comms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>Invoice Comms</title>
+    <title>Receipt Comms</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
@@ -20,6 +20,13 @@
             font-family: 'Poppins', sans-serif;
             font-size: 16px;
             text-align:justify;
+        }
+
+        .headings_text {
+            font-family: 'Poppins', sans-serif;
+            font-size: 18px;
+            text-align:justify;
+            font-weight: 600;
         }
 
         .contact_text {
@@ -98,6 +105,24 @@
         .email_header img {
             width:99%;
         }
+
+        .orange_box {
+            border: 5px solid orange;
+            border-radius: 25px 0px 25px 0px;
+            padding: 1rem;
+            /* width:250px; */
+            /* text-align: center; */
+        }
+
+        .black_button {
+            border: 5px solid black;
+            background-color: black;
+            border-radius: 5px 0px 5px 0px;
+            color: white;
+            width:250px; 
+            text-align: center;
+            margin: 0 auto;
+        }
     </style>
 </head>
 
@@ -112,7 +137,7 @@
 <!-- End of Layout Header Snippet  -->
 
     <div class="email_header">
-        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_invoice.png' alt="Your Heat Header"/>
+        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_thank_you.png' alt="Your Heat Header"/>
     </div>
 
     <div class="body_text">
@@ -127,34 +152,57 @@
                     href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a>
             </div>
 
-            <p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
+            <p class="all_text">Hi {{ customer_title }} {{ customer_last_name }},</p>
 
             <!-- Insert Email body content here  -->
 
-                <p class="all_text">
-                    Thank you for choosing Your Heat as your selected installer for your new {{brand}} boiler.
-                </p>
-                <p class="all_text">      
-                    Please find attached the information required for your deposit payment, we can take this via Credit/Debit card
-                    simply by contacting a member of the team here on <a href="tel:01732622990"><b>01732 622990</b></a>.
-                </p>
-                <p class="all_text">
-                    Alternatively you can send this direct via a bank transfer, please send to:
-                </p>
-                <p class="all_text">
-                    Account Name: <b>Your Heat Ltd</b><br>
-                    Account Number: <b>54576261</b><br>
-                    Sort Code: <b>60-60-08</b><br>
-                    Reference: <b>{{smartsheet_id}}</b>
+                <p class="headings_text">
+                    Thank You.
                 </p>
 
-
+                <p class="all_text">
+                    Your Heat have received payment for your deposit for the installation at {{house_name_or_number}} {{street_address}}. We are now getting everything ready for your installation.  
+                </p>
+                <p class="all_text">
+                    We have attached your receipt to this email.
+                </p>
+                <div class="orange_box">
+                    <p class="headings_text">What Happens Next?</p>
+                    <p class="all_text">The team here will now be arranging the materials and scheduling the work in the calendars, please make every effort for work areas to be as clear as possible for when our engineers arrive.  Other than that, sit back and we’ll see you on the agreed date.</p>
+                   
+                    <p class="headings_text">Keep your warranty valid.</p>
+                    <p class="all_text">
+                        Something worth considering is the ongoing servicing for your new boiler.  The boiler will come with a warranty, in order to keep this valid, an annual service should be carried out every 12 months from the date of installation by a Gas Safe or Oftec Registered engineer.  
+                    </p>
+                    <p class="all_text">
+                        We offer a range of <a href="https://yourheat.co.uk/care-plan-pricing/" target="_blank"><b>Your Heat Care Plans</b></a> which include an annual service as standard by one of our engineers.
+                    </p>
+                    <p class="all_text">
+                        We have a range of plans that can take care of this for you, you could even benefit from an extended warranty (see quote for details)
+                    </p>
+                    <div style="text-align:center; margin: 0 auto"> <a href="https://yourheat.co.uk/care-plan-pricing/" target="_blank"><div class="black_button">Your Heat Plans</div></a></div>
+                </div>
+                <!-- <p class="all_text">      
+                    We hope you had a great experience with us, we’d really love to hear about how we did.  If you have a moment, please do leave us a review.
+                </p>
+                <div style="text-align:center; margin: 0 auto"> <a href="https://yourheat.co.uk/contact-us/" target="_blank"><div class="black_button">How did we do?</div></a></div>
+                <br> -->
+                <!-- <div class="orange_box">
+                    <p class="headings_text">Refer a friend and receive a £50 Amazon voucher</p>
+                    <p class="all_text">How it works</p>
+                    <ol type="1">
+                        <li class="all_text">Use the “refer a friend button” found below, This will open an email to your friend with their unique promo code</li>
+                        <li class="all_text">Enter your friend's email address and simply send the email</li>
+                        <li class="all_text">Do not delete the hello@yourheat.co.uk email address in the cc line. This is so we can make sure you are sent your voucher</li>
+                      </ol>
+                      <div style="text-align:center; margin: 0 auto"> <a href="https://yourheat.co.uk/care-plan-pricing/"><div class="black_button">Refer a friend</div></a></div>
+                </div>
+                <br> -->
             <p class="all_text">
-                We’re just getting things ready here, once we have received your payment, we will send over your receipt, your confirmation, along with what to expect before and during your installation with us.
+                Many thanks, The Your Heat Team
             </p>
-
             <p class="all_text">
-                Warm regards, The Your Heat Team
+                We’ll see you soon!
             </p>
 
             <!-- End of Email body content  -->
