--- a/templates/pdf/user_yourheatx/invoice_for_pdf.html
+++ b/templates/pdf/user_yourheatx/invoice_for_pdf.html
@@ -123,7 +123,7 @@
       Account Name: Your Heat LTD<br>
       Account Number: 54576261<br>
       Sort Code: 60-60-08<br>
-      All major debit and credit cards accepted - including AMEX
+      All major debit and credit cards accepted
     </td>
     <td id="invoice-cell-middle"></td>
     <td id="invoice-cell-left">
