YH Loosened traffic light logic on invoices/receipt

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,6 +89,13 @@ h4 {
   color:darkslategray;
 }
 
+h5 {
+  text-align: center;
+  font-size: 1.0rem;
+  color:darkblue;
+  padding-top: 15px;
+}
+
 
 h7 {
   text-align: left;
